src/test/ui/rfc-2632-const-trait-impl/inherent-impl.stderr
error: inherent impls cannot be `const`
  --> $DIR/inherent-impl.rs:8:12
   |
LL | impl const S {}
   |      ----- ^ inherent impl for this type
   |      |
   |      `const` because of this
   |
   = note: only trait implementations may be annotated with `const`

error: inherent impls cannot be `const`
  --> $DIR/inherent-impl.rs:12:12
   |
LL | impl const T {}
   |      ----- ^ inherent impl for this type
   |      |
   |      `const` because of this
   |
   = note: only trait implementations may be annotated with `const`

error[E0207]: the effect parameter `host` is not constrained by the impl trait, self type, or predicates
  --> $DIR/inherent-impl.rs:8:1
   |
LL | impl const S {}
   | ^^^^^^^^^^^^ unconstrained effect parameter

error[E0207]: the effect parameter `host` is not constrained by the impl trait, self type, or predicates
  --> $DIR/inherent-impl.rs:12:1
   |
LL | impl const T {}
   | ^^^^^^^^^^^^ unconstrained effect parameter

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0207`.
